# reels-project-idea-bot

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
deploy/: inspiration-collector.service  inspiration-collector.timer  inspiration-processor.service  inspiration-processor.timer
deploy/openclaw/reel-clips/: SKILL.md
docs/superpowers/plans/: 2026-06-28-inspiration-pipeline.md
docs/superpowers/specs/: 2026-06-28-inspiration-pipeline-design.md
inspiration_pipeline/: categories.py  claude_client.py  cli.py  collector.py  config.py  db.py  dreck.py  filing.py  models.py  notes.py  processor.py
remote/: requirements-dreck.txt  transcribe_ocr.py
tests/: conftest.py  test_categories.py  test_claude_client.py  test_cli.py  test_clip.py  test_collector.py  test_config.py  test_db.py  test_dreck.py  test_filing.py  test_models.py  test_notes.py  test_processor.py  test_remote_transcribe_ocr.py
tools/: clip.py  ig_login.py
