[project]
name = "inspiration-pipeline"
version = "0.1.0"
description = "Auto-ingest saved Instagram reels into a markdown knowledge vault"
requires-python = ">=3.11"
dependencies = [
    "instagrapi>=2.1.2",
    "yt-dlp>=2025.6.9",
    "wakeonlan>=3.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
inspiration = "inspiration_pipeline.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inspiration_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
